# This file is auto-generated from the current state of the database. Instead
# of editing this file, please use the migrations feature of Active Record to
# incrementally modify your database, and then regenerate this schema definition.
#
# This file is the source Rails uses to define your schema when running `bin/rails
# db:schema:load`. When creating a new database, `bin/rails db:schema:load` tends to
# be faster and is potentially less error prone than running all of your
# migrations from scratch. Old migrations may fail to apply correctly if those
# migrations use external dependencies or application code.
#
# It's strongly recommended that you check this file into your version control system.

ActiveRecord::Schema[8.1].define(version: 2026_03_09_050000) do
  # These are extensions that must be enabled in order to support this database
  enable_extension "pg_catalog.plpgsql"
  enable_extension "pgcrypto"

  create_table "categories", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
    t.datetime "created_at", null: false
    t.string "name", null: false
    t.datetime "updated_at", null: false
    t.index ["name"], name: "index_categories_on_name", unique: true
  end

  create_table "equipments", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
    t.integer "available_count", default: 0, null: false
    t.uuid "category_id"
    t.datetime "created_at", null: false
    t.text "description"
    t.datetime "discarded_at"
    t.integer "low_stock_threshold", default: 0
    t.string "management_number", null: false
    t.string "name", null: false
    t.string "status", default: "available", null: false
    t.integer "total_count", default: 0, null: false
    t.datetime "updated_at", null: false
    t.index ["category_id"], name: "index_equipments_on_category_id"
    t.index ["management_number"], name: "index_equipments_on_management_number", unique: true
    t.index ["status", "discarded_at"], name: "index_equipments_on_status_and_discarded_at"
  end

  create_table "loans", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
    t.date "actual_return_date"
    t.datetime "created_at", null: false
    t.uuid "equipment_id", null: false
    t.date "expected_return_date", null: false
    t.date "start_date", null: false
    t.string "status", default: "pending_approval", null: false
    t.datetime "updated_at", null: false
    t.uuid "user_id", null: false
    t.index ["equipment_id", "status"], name: "index_loans_on_equipment_id_and_status"
    t.index ["equipment_id"], name: "index_loans_on_equipment_id"
    t.index ["status", "expected_return_date"], name: "index_loans_on_status_and_expected_return_date"
    t.index ["user_id", "status"], name: "index_loans_on_user_id_and_status"
    t.index ["user_id"], name: "index_loans_on_user_id"
  end

  create_table "users", id: :uuid, default: -> { "gen_random_uuid()" }, force: :cascade do |t|
    t.datetime "created_at", null: false
    t.string "email", default: "", null: false
    t.string "encrypted_password", default: "", null: false
    t.string "name"
    t.datetime "remember_created_at"
    t.datetime "reset_password_sent_at"
    t.string "reset_password_token"
    t.integer "role", default: 0, null: false
    t.datetime "updated_at", null: false
    t.index ["email"], name: "index_users_on_email", unique: true
    t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
    t.index ["role"], name: "index_users_on_role"
  end

  add_foreign_key "equipments", "categories"
  add_foreign_key "loans", "equipments"
  add_foreign_key "loans", "users"
end
